fix/직위변경기능구현#2